# gazebo-flying-camera-plugin

./: CMakeLists.txt  README.md
src/: CameraPoseCollector.cc  FlyingCameraFromPoses.cc  FlyingCameraPlugin.cc  camera_poses.txt
